controls outline clipping fix

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -850,7 +850,8 @@ a {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-  list-style-type: none; }
+  list-style-type: none;
+  padding-bottom: 1px; }
 
 .controls__item:not(:last-child) {
   margin-right: 13px; }
