--- a/source/sass/blocks/controls.scss
+++ b/source/sass/blocks/controls.scss
@@ -2,10 +2,13 @@
   display: flex;
   justify-content: center;
   @include list;
+  padding-bottom: 1px;
 }
 
-.controls__item:not(:last-child) {
-  margin-right: 13px;
+.controls__item {
+  &:not(:last-child) {
+    margin-right: 13px;
+  }
 }
 
 .controls__button {
